Fix the padding and font size for up arrow on tablet

--- a/styles.css
+++ b/styles.css
@@ -1749,8 +1749,9 @@ fieldset {
     
     /* visual styling */
     text-decoration: none;
-    padding: 1rem;
+    padding: 1.5rem;
     font-family: sans-serif;
+    font-size: xx-large;
     background: #B39C4D;
     border-radius: 100px;
     white-space: nowrap;
